examples/test/testpolicy13865.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13865
  namespace: namespace310
spec:
  podSelector:
    matchLabels:
      key40: value29
      key14: value9
      key24: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value39
      podSelector:
        matchLabels:
          key22: value30
          key3: value2
